fix some bugs(audit log, change welcome message)

--- a/aspnet-core/src/Sys.AuthServer/appsettings.json
+++ b/aspnet-core/src/Sys.AuthServer/appsettings.json
@@ -1,12 +1,13 @@
 {
   "App": {
     "SelfUrl": "https://localhost:44382",
-    "ClientUrl": "http://localhost:4200",
-    "CorsOrigins": "https://*.Sys.com,http://localhost:4200,https://localhost:44311,https://localhost:44328,https://localhost:44388,http://localhost:3000,https://localhost:44391",
-    "RedirectAllowedUrls": "http://localhost:4200,https://localhost:44388,https://localhost:44311,https://localhost:44384"
+    //"ClientUrl": "http://localhost:4200",
+    "CorsOrigins": "https://*.azurewebsites.net,https://*.sys.com,http://localhost:4200,https://localhost:44311,https://localhost:44328,https://localhost:44388,http://localhost:3000,https://localhost:44391",
+    "RedirectAllowedUrls": "https://demoapi.azurewebsites.net,http://localhost:4200,https://localhost:44388,https://localhost:44311,https://localhost:44384"
   },
   "ConnectionStrings": {
     "Default": "Server=.; Database=Sys;User Id=sa;password=pass@word1;TrustServerCertificate=true;"
+    //"Default": "Server=tcp:demodb.database.windows.net,1433;Initial Catalog=sys;Persist Security Info=False;User ID=sysadmin;Password=P@ssw0rd1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Redis": {
     "IsEnabled": "false",
@@ -14,5 +15,9 @@
   },
   "StringEncryption": {
     "DefaultPassPhrase": "r8QNyNPCK5VrhQIp"
+  },
+  "AuthServer": {
+    "EncryptionCertificateThumbprint": "998031D07915EC9B8F0ACD93B175DAF730E22386",
+    "SigningCertificateThumbprint": "7B19E8634F02EAB26B3723241E961D76BF4F8289"
   }
 }
