--- a/aspnet-core/src/Sys.DbMigrator/appsettings.json
+++ b/aspnet-core/src/Sys.DbMigrator/appsettings.json
@@ -20,6 +20,7 @@
       },
       "Sys_App": {
         "ClientId": "Sys_App",
+        "ClientSecret": "1q2w3e*",
         "RootUrl": [ "http://localhost:4200" ]
       },
       "Sys_BlazorServerTiered": {
@@ -29,7 +30,8 @@
       },
       "Sys_Swagger": {
         "ClientId": "Sys_Swagger",
-        "RootUrl": [ "https://localhost:44328" ]
+        "ClientSecret": "1q2w3e*",
+        "RootUrl": [ "https://localhost:44328", "https://demoapi.azurewebsites.net" ]
       },
       "Sys_Next_App": {
         "ClientId": "Sys_Next_App",
