--- a/aspnet-core/src/Sys.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/Sys.HttpApi.Host/appsettings.json
@@ -1,9 +1,10 @@
 {
   "App": {
-    "CorsOrigins": "https://*.Sys.com,http://localhost:4200,http://localhost:3000,http://localhost:3001,https://localhost:44391"
+    "CorsOrigins": "https://*.azurewebsites.net,https://*.sys.com,http://localhost:4200,http://localhost:3000,http://localhost:3001,https://localhost:44391"
   },
   "ConnectionStrings": {
     "Default": "Server=.; Database=Sys;User Id=sa;password=pass@word1;TrustServerCertificate=true;"
+    //"Default": "Server=tcp:demodb.database.windows.net,1433;Initial Catalog=sys;Persist Security Info=False;User ID=sysadmin;Password=P@ssw0rd1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Redis": {
     "IsEnabled": "false",
