--- a/aspnet-core/src/Sys.Web/appsettings.json
+++ b/aspnet-core/src/Sys.Web/appsettings.json
@@ -4,6 +4,7 @@
   },
   "ConnectionStrings": {
     "Default": "Server=.; Database=Sys;User Id=sa;password=pass@word1;TrustServerCertificate=true;"
+    //"Default": "Server=tcp:demodb.database.windows.net,1433;Initial Catalog=sys;Persist Security Info=False;User ID=sysadmin;Password=P@ssw0rd1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "RemoteServices": {
     "Default": {
