--- a/modules/EInvoice/src/EInvoice.Web/EInvoice.Web.csproj
+++ b/modules/EInvoice/src/EInvoice.Web/EInvoice.Web.csproj
@@ -43,4 +43,8 @@
     <Content Remove="wwwroot\**\*.*" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="Pages\_ViewImports.cshtml" />
+  </ItemGroup>
+
 </Project>
