--- a/aspnet-core/src/Sys.HttpApi.Host/Sys.HttpApi.Host.csproj
+++ b/aspnet-core/src/Sys.HttpApi.Host/Sys.HttpApi.Host.csproj
@@ -8,10 +8,12 @@
     <RootNamespace>Sys</RootNamespace>
     <PreserveCompilationReferences>true</PreserveCompilationReferences>
     <UserSecretsId>Sys-4681b4fd-151f-4221-84a4-929d86723e4c</UserSecretsId>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="DistributedLock.SqlServer" Version="1.0.3" />
+    <PackageReference Include="OpenIddict.Server" Version="4.8.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.10" />
@@ -23,6 +25,7 @@
     <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="7.4.2" />
     <PackageReference Include="Volo.Abp.DistributedLocking" Version="7.4.2" />
     <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="7.4.2" />
+    <PackageReference Include="Volo.Abp.OpenIddict.AspNetCore" Version="7.4.2" />
     <PackageReference Include="Volo.Abp.Swashbuckle" Version="7.4.2" />
   </ItemGroup>
 
