--- a/modules/EInvoice/src/EInvoice.Application/EInvoice.Application.csproj
+++ b/modules/EInvoice/src/EInvoice.Application/EInvoice.Application.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Sylvan.Data.Csv" Version="1.3.5" />
     <PackageReference Include="Volo.Abp.AutoMapper" Version="7.4.2" />
     <PackageReference Include="Volo.Abp.Ddd.Application" Version="7.4.2" />
