--- a/modules/EInvoice/src/EInvoice.Application/EInvoice.Application.csproj
+++ b/modules/EInvoice/src/EInvoice.Application/EInvoice.Application.csproj
@@ -10,9 +10,11 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SSH.NET" Version="2024.0.0" />
     <PackageReference Include="Sylvan.Data.Csv" Version="1.3.5" />
     <PackageReference Include="Volo.Abp.AutoMapper" Version="7.4.2" />
     <PackageReference Include="Volo.Abp.Ddd.Application" Version="7.4.2" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="7.4.2" />
     <ProjectReference Include="..\..\..\FileManagement\src\EasyAbp.FileManagement.Application\EasyAbp.FileManagement.Application.csproj" />
     <ProjectReference Include="..\EInvoice.Application.Contracts\EInvoice.Application.Contracts.csproj" />
     <ProjectReference Include="..\EInvoice.Domain\EInvoice.Domain.csproj" />
