--- a/modules/TaskScheduler/src/TaskScheduler.Application.Contracts/TaskScheduler.Application.Contracts.csproj
+++ b/modules/TaskScheduler/src/TaskScheduler.Application.Contracts/TaskScheduler.Application.Contracts.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.DataAnnotations" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Quartz" Version="3.8.0" />
     <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="7.4.2" />
