--- a/modules/TaskScheduler/src/TaskScheduler.Web/TaskScheduler.Web.csproj
+++ b/modules/TaskScheduler/src/TaskScheduler.Web/TaskScheduler.Web.csproj
@@ -10,6 +10,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>TaskScheduler.Web</RootNamespace>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
+    <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
   </PropertyGroup>
 
   <ItemGroup>
